<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:baselineAligned="false">

    <Button
        android:text="@string/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hello_world"
        android:onClick="lienbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <EditText
        android:id="@+id/etxt_fromdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/from_date"
        android:layout_centerVertical="true"
/>
    <Button
        android:text="@string/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_2"
        android:onClick="lienbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/etxt_todate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/to_date"
        android:layout_alignBaseline="@+id/etxt_fromdate"
        android:layout_alignBottom="@+id/etxt_fromdate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Jusque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/etxt_fromdate"
        android:layout_alignBottom="@+id/etxt_fromdate"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello_World"
        android:id="@+id/tv_hello_world"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <Button
        android:text="Liste des Bières"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:id="@+id/button_3"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />


</RelativeLayout>